apps/ntfy/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ntfy
  template:
    metadata:
      labels:
        app: ntfy
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: veirt.dev/node-pool
                    operator: In
                    values:
                      - vps
      tolerations:
        - key: "veirt.dev/node-pool"
          operator: "Equal"
          value: "vps"
          effect: "NoSchedule"
      containers:
        - name: ntfy
          image: binwiederhier/ntfy:v2.29.0
          args: ["serve"]
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 32Mi
            limits:
              memory: 96Mi
          volumeMounts:
            - name: data-volume
              mountPath: /var/cache/ntfy
              subPath: ntfy/cache
            - name: data-volume
              mountPath: /etc/ntfy
              subPath: ntfy/config
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: data-pvc
