apps/ntfy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ntfy-service
spec:
  selector:
    app: ntfy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
